Update navbar color for mobile devices

--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@ nav .fas{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+        background: #212121;
         position: fixed;
         top:0;
         right:-200px;
